--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@badrap/bar-of-progress": "^0.1.2",
     "@heroicons/react": "^1.0.4",
+    "@reduxjs/toolkit": "^1.6.1",
     "axios": "^0.21.1",
+    "firebase": "^9.0.1",
     "next": "latest",
+    "next-auth": "^3.29.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
