--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@badrap/bar-of-progress": "^0.1.2",
     "@heroicons/react": "^1.0.4",
     "@reduxjs/toolkit": "^1.6.1",
+    "@tailwindcss/line-clamp": "^0.2.1",
     "axios": "^0.21.1",
     "firebase": "^9.0.1",
     "next": "latest",
