--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "next-auth": "^3.29.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.4"
+    "react-redux": "^7.2.4",
+    "react-spinners": "^0.11.0",
+    "stripe": "^8.172.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
